--- a/uiTest/package.json
+++ b/uiTest/package.json
@@ -17,5 +17,10 @@
     "svelte-check": "^4.3.4",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
+    "flowbite": "^4.0.1",
+    "tailwindcss": "^4.1.17"
   }
 }
