--- a/uiTest/package.json
+++ b/uiTest/package.json
@@ -19,8 +19,11 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@tailwindcss/vite": "^4.1.17",
     "flowbite": "^4.0.1",
+    "flowbite-svelte": "^1.29.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   }
 }
